Fixed inconsistent spacing in grid, fixed. FOUC on initial load

--- a/src/styles.css
+++ b/src/styles.css
@@ -172,7 +172,7 @@ dialog::backdrop {
 
 .todo-item {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: auto 1fr auto auto;
   align-items: center;
   margin-top: 1rem;
 }
@@ -321,6 +321,7 @@ p.desc {
   margin-top: 1rem;
 }
 
+/* text section in to-do's */
 div.todo-container > div > div:nth-child(3) {
   display: flex;
   flex-direction: column;
